# STM32G0_Rust_DMA

./: Cargo.toml  README.md  build.rs  debug.gdb
.cargo/: config
src/: main.rs
