[package]
authors = ["WRansohoff"]
edition = "2018"
readme = "README.md"
name = "stm32g0-rust-audio"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"

# Local STM32 Peripheral Access Crates.
[dependencies.stm32_pac]
path = "../stm32_pac"
version = "0.0.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32g0-rust-audio"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true

# Define which board to build for.
# The '_rt's are optional; they select the 'rt' feature of the PAC.
# TODO: Unify the target selection into a single configuration?
[features]
default = [ "G071GB" ]
G071GB = [ "stm32_pac/stm32g0x1_rt" ]
